@@ -6,23 +6,21 @@ buildscript {
     }
 
     dependencies {
-        classpath("org.asciidoctor:asciidoctorj:2.5.12")
+        classpath("org.asciidoctor:asciidoctorj:2.5.13")
     }
 
 }
 plugins {
-    id "org.asciidoctor.jvm.convert" version "4.0.2"
+    id "org.asciidoctor.jvm.convert" version "4.0.3"
 }
 
 asciidoctor {
-    attributes.put("allow-uri-read", "true")
-
-    sourceDir = file('docs')
-
-    sources {
-        include 'index.adoc'
+    jvm {
+        jvmArgs("--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED", "--add-opens", "java.base/java.io=ALL-UNNAMED")
     }
 
+    attributes.put("allow-uri-read", "true")
+    sourceDir = file('docs')
     outputDir = file('build')
 }
 
